# yttg-server

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/env/: __init__.py  env.py
src/modules/tcp/: __init__.py  server.py
src/modules/tcp/types/: __init__.py  peer.py  request.py  route.py  session.py  tcp.py
src/modules/telegram/: __init__.py
src/modules/telegram/constraint/: __init__.py  constaint.py  decorator.py
src/modules/telegram/driver/: __init__.py  const.py  driver.py  qr.py
src/modules/telegram/handler/: __init__.py  add.py  remove.py  temp.py
src/modules/telegram/types/: __init__.py  initoptions.py  proxy.py
src/project/globalobjects/: __init__.py  telegram.py
src/project/globalobjects/server/: __init__.py  instance.py
src/project/globalobjects/server/config/: __init__.py  instance.py  protocol.py  server.py
src/project/globalobjects/telegram/: __init__.py  config.py  instance.py
src/project/pipelines/: __init__.py
src/project/pipelines/constraints/: __init__.py  content.py  errors.py  language.py  streams.py
src/project/pipelines/download/: __init__.py  callback.py  namespace.py  pipelines.py
src/project/pipelines/streams/: __init__.py  namespace.py  pipelines.py
src/project/pipelines/subscribe/: __init__.py  const.py  namespace.py  pipelines.py
src/project/pipelines/thumbnail/: __init__.py  namespace.py  pipelines.py
src/project/pipelines/utils/: __init__.py  channel.py  language.py  parse.py  stream.py
src/project/server/: __init__.py  server.py
src/project/server/protocol/: __init__.py  converter.py  protocol.py
src/project/server/protocol/crypto/: __init__.py  aes.py  hello.py  hmac.py  keys.py
src/project/server/types/: __init__.py
src/project/server/types/request/: __init__.py  base.py  channel.py  enums.py  search.py  stream.py  thumbnail.py
src/project/server/types/response/: __init__.py  base.py  enums.py  errors.py
src/project/server/utils/: __init__.py  case.py
src/project/telegram/: __init__.py  chat.py  driver.py
src/project/telegram/chat/: __init__.py  acquired.py  expected.py
src/project/telegram/types/: __init__.py  ordered.py  result.py
src/project/telegram/utils/: __init__.py  retry.py
(+16 files in other folders)
